--- a/src/vars.css
+++ b/src/vars.css
@@ -1,12 +1,13 @@
-:root{
-    /* Colours */
-    --color-text: #fff;
-    --color-texthover: #42f700;
-    --color-primary: #576cbc;
-    --color-secondary: #19376d;
-    --color-dark: #0b2447;
-    --color-bg: #04152d;
+:root {
+  /* Colours */
+  --color-text: #fff;
+  --color-texthover: #42f700;
+  --color-primary: #576cbc;
+  --color-secondary: #19376d;
+  --color-dark: #0b2447;
+  --color-bg: #04152d;
 
-    /* Fonts */
-    --font-roboto: "Roboto";
+  /* Fonts */
+  --font-roboto: "Roboto";
+  --section-spacing: 100px;
 }
